# gemini-pdf-json-airtable

./: main.py  pyproject.toml
