[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"  # Ensure compatibility with your Python version
google-generativeai = "^0.3.1"
xds-protos = "^1.60.0"
pillow = "^10.3.0"
requests = "^2.32.2"
pymupdf = "^1.21.0"  # Add PyMuPDF
flask = "^2.2"  # Use a compatible version of Flask

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
